fixed player overflow flicker

--- a/static/sass/site/apps/_player.sass
+++ b/static/sass/site/apps/_player.sass
@@ -1,18 +1,12 @@
-
-
 // global styling for popup (the 'things' outside Vue app)
+
 body.player
   height: 100vh
   width: 100vw
   background: #fafafa
-
-
-
+  overflow-x: hidden
 
 .player-app
-
-  //&.is-master
-  //  background: rgba(110, 255, 228, 0.51)
 
   &.is-slave
     background: rgba(110, 255, 228, 0.51)
@@ -28,29 +22,3 @@ body.player
     left: 20px
     width: 200px
     height: 160px
-
-
-  //.items-to-play
-  //  border: 1px solid yellow
-  //  padding: 5px
-  //
-  //  .item-to-play
-  //    padding: 10px
-  //    margin-bottom: 10px
-  //    border: 1px solid green
-  //
-  //    .item-to-play-header
-  //      padding: 10px
-  //      font-weight: bold
-  //
-  //    .item-to-play-content
-  //      padding: 10px
-  //
-  //      .item
-  //        //display: flex
-  //        padding: 10px
-  //        margin-bottom: 10px
-  //        background: white
-  //
-  //        .playhead
-  //          display: block
